<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    tools:context="com.alc.diarymohamed.ui.activity.CountryAddEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/add_country_flag"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_country_name_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_country_country_label"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/add_country_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_country_prefix_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_country_prefix_label"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/add_country_prefix_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_country_currency_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_country_currency_label"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/add_country_currency_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_country_capital_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_country_capital_label"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/add_country_capital_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_country_time_zone_label"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_country_time_zone_label"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/add_country_time_zone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/country_send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/btn_send"
            android:textAllCaps="true" />

    </LinearLayout>


</RelativeLayout>
