<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    tools:context="com.alc.diarymohamed.ui.activity.CountryDetailsActivity"
    android:id="@+id/country_details_root">

    <LinearLayout
        android:id="@+id/layout_name_country"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0.2">

            <ImageView
                android:id="@+id/details_country_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/brazil"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details_country_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textSize="22sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/details_country_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="216"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3">

            <ImageView
                android:id="@+id/details_country_copi_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:src="@drawable/copy_color"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/details_country_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/share"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/layout_name_country"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/details_country_currency_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/add_country_currency_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/details_country_currency_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="money_value" />

            <TextView
                android:id="@+id/details_country_capital_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/add_country_capital_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/details_country_capital_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="capital_value" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/card_view_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/details_country_timezone_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/add_country_time_zone_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/details_country_timezone_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="timezonevalue" />

            <TextView
                android:id="@+id/details_country_localhour_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/add_country_time_local_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/details_country_localhour_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="timelocalvalue" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/country_select_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view_2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_select"
        android:textAllCaps="true"
        android:textColor="@color/white" />


</RelativeLayout>
